charts/chart_deps/app/common: pv/pvc to core chart

--- a/charts/chart_deps/app/common/templates/pv.yaml
+++ b/charts/chart_deps/app/common/templates/pv.yaml
@@ -1,31 +1,4 @@
 {{- range $name, $pv := .Values.pvs }}
-apiVersion: v1
-kind: PersistentVolume
-metadata:
-  name: {{ include "common.fullname" $ }}-{{ $name }}
-spec:
-  {{- if $pv.accessModes }}
-  accessModes:
-  {{- toYaml $pv.accessModes | nindent 4}}
-  {{- else }}
-  accessModes:
-  - ReadWriteOnce
-  {{- end }}
-  capacity:
-    storage: {{ $pv.storage }}
-  {{- if $pv.storageClass }}
-  storageClassName: {{ $pv.storageClass }}
-  {{- end }}
-  {{- with $pv.mountOptions }}
-  mountOptions:
-  {{- toYaml . | nindent 4 }}
-  {{- end }}
-  {{- with $pv.csi }}
-  csi:
-  {{- tpl (toYaml .) $ | nindent 4 }}
-  {{- end }}
-  {{- with $pv.claimRef }}
-  claimRef:
-  {{- tpl (toYaml .) $ | nindent 4 }}
-  {{- end }}
+{{- $pv = set $pv "enabled" true }}
+{{- include "core.pv" (list $ (list ) $pv ) }}
 {{- end }}
