charts/chart_deps/app/common: move serviceMonitor to core chart

--- a/charts/chart_deps/app/common/templates/servicemonitor.yaml
+++ b/charts/chart_deps/app/common/templates/servicemonitor.yaml
@@ -1,37 +1,10 @@
-{{- if .Values.servicemonitor.enabled }}
-apiVersion: monitoring.coreos.com/v1
-kind: ServiceMonitor
-metadata:
-  labels:
-{{- if .Values.servicemonitor.labels }}
-    {{ toYaml .Values.servicemonitor.labels | indent 4 }}
-    {{- include "common.labels" . | nindent 4 }}
-    {{- if .Values.servicemonitor.prometheusSelector }}
-    {{ tpl (toYaml .Values.servicemonitor.prometheusSelector) . | nindent 4}}
-    {{- end }}
-{{- else }}
-    {{- if .Values.servicemonitor.prometheusSelector }}
-    {{ tpl (toYaml .Values.servicemonitor.prometheusSelector) . | nindent 4}}
-    {{- end }}
-    {{- include "common.labels" . | nindent 4 }}
+{{- $serviceMonitor := .Values.serviceMonitor }}
+{{- $labels := include "common.labels" $ | fromYaml }}
+{{- if $serviceMonitor.labels }}
+{{- $labels = merge $labels $serviceMonitor.labels }}
 {{- end }}
-  name: {{ template "common.fullname" . }}
-spec:
-  {{- with .Values.servicemonitor.endpoints }}
-  endpoints:
-  {{- tpl (toYaml .) $ | nindent 4 }}
-  {{- end }}
-  jobLabel: {{ template "common.fullname" . }}
-  namespaceSelector:
-    matchNames:
-    - {{ .Release.Namespace }}
-  selector:
-    matchLabels:
-    {{- include "common.selectorLabels" . | nindent 6 }}
-{{- if .Values.servicemonitor.targetLabels }}
-  targetLabels:
-{{- range .Values.servicemonitor.targetLabels }}
-  - {{ . }}
-{{- end }}
-{{- end }}
-{{- end }}
+{{- $serviceMonitor = set $serviceMonitor "jobLabel" (include "common.fullname" .) }}
+{{- $serviceMonitor = set $serviceMonitor "selectorLabels" (include "common.selectorLabels" . | fromYaml ) }}
+{{- $serviceMonitor = set $serviceMonitor "name" (include "common.fullname" . ) }}
+
+{{- include "core.serviceMonitor" (list $ (toYaml $labels) $serviceMonitor) }}
