--- a/charts/fluent/Chart.yaml
+++ b/charts/fluent/Chart.yaml
@@ -28,3 +28,8 @@ dependencies:
     version: 0.1.0
     alias: fluentbit
     condition: fluentbit.enabled
+  - name: fluentbit-operated
+    repository: file://../chart_deps/fluent/fluentbit/fluentbit-operated/
+    version: 0.1.0
+    alias: gcp
+    condition: gcp.enabled
