--- a/charts/fluent/Chart.yaml
+++ b/charts/fluent/Chart.yaml
@@ -31,5 +31,5 @@ dependencies:
   - name: fluentbit-operated
     repository: file://../chart_deps/fluent/fluentbit/fluentbit-operated/
     version: 0.1.0
-    alias: gcp
-    condition: gcp.enabled
+    alias: fluentbit-gcp
+    condition: fluentbit-gcp.enabled
