--- a/charts/loki/values.yaml
+++ b/charts/loki/values.yaml
@@ -59,6 +59,7 @@ loki:
       max_label_names_per_series: 20
       per_stream_rate_limit: 15MB
       per_stream_rate_limit_burst: 30MB
+      # logs retention = 60 days
       retention_period: 1440h
     schemaConfig:
       configs: []
