--- a/charts/loki/values.yaml
+++ b/charts/loki/values.yaml
@@ -44,7 +44,12 @@ loki:
     create: false
     name: grafana-loki
   loki:
+    analytics:
+      reporting_enabled: false
     auth_enabled: false
+    compactor:
+      delete_request_store: ""
+      retention_enabled: true
     limits_config:
       discover_log_levels: false
       discover_service_name: []
@@ -54,12 +59,12 @@ loki:
       max_label_names_per_series: 20
       per_stream_rate_limit: 15MB
       per_stream_rate_limit_burst: 30MB
-    analytics:
-      reporting_enabled: false
-    storage:
-      use_thanos_objstore: true
+      # logs retention = 60 days
+      retention_period: 1440h
     schemaConfig:
       configs: []
+    storage:
+      use_thanos_objstore: true
   gateway:
     enabled: false
   ingress:
