--- a/charts/chart_deps/fluent/fluentbit/outputs/Chart.yaml
+++ b/charts/chart_deps/fluent/fluentbit/outputs/Chart.yaml
@@ -3,3 +3,8 @@ appVersion: "1.0"
 description: Chart for configuring fluentbit outputs
 name: fluentbit-outputs
 version: 0.1.0
+
+dependencies:
+  - name: fluentbit-lib
+    version: 0.1.0
+    repository: file://../lib
