--- a/charts/chart_deps/fluent/fluentbit/outputs/templates/clusteroutputs.yaml
+++ b/charts/chart_deps/fluent/fluentbit/outputs/templates/clusteroutputs.yaml
@@ -1,155 +1,14 @@
-{{- range $name, $clInput :=  .Values.clusterInputs }}
-{{- $labels := include "fluentbit-inputs.labels" $ | fromYaml }}
-{{- $clInput = set $clInput "name" ( printf "%s-%s" (include "fluentbit-inputs.fullname" $ )  $name ) }}
-{{- if eq (hasKey $clInput "enabled") false }}
-{{- $clInput = set $clInput "enabled" true }}
+{{- range $name, $clOutput :=  .Values.clusterOutputs }}
+{{- $labels := include "fluentbit-outputs.labels" $ | fromYaml }}
+{{- $clOutput = set $clOutput "name" ( printf "%s-%s" (include "fluentbit-outputs.fullname" $ )  $name ) }}
+{{- if eq (hasKey $clOutput "enabled") false }}
+{{- $clOutput = set $clOutput "enabled" true }}
 {{- end }}
-{{- if $clInput.labels }}
-{{- $labels = merge $labels $clInput.labels }}
+{{- if $clOutput.labels }}
+{{- $labels = merge $labels $clOutput.labels }}
 {{- end }}
 {{- if $.Values.labels }}
 {{- $labels = merge $labels $.Values.labels }}
 {{- end }}
-{{- include "fluentbit.clusterinput" (list $ (toYaml $labels) $clInput ) }}
-{{- end }}
----
-apiVersion: fluentbit.fluent.io/v1alpha2
-kind: ClusterOutput
-metadata:
-  name: {{ printf "%s-%s" (include "fluentbit-outputs.fullname" $) $cl_output_name }}
-  labels:
-{{- include "fluentbit-outputs.labels" $ | nindent 4 }}
-{{- with $cl_output_obj.labels }}
-{{- tpl (toYaml .) $ | nindent 4 }}
-{{- end }}
-{{- with $.Values.labels }}
-{{- tpl (toYaml .) $ | nindent 4 }}
-{{- end }}
-spec:
-  {{- with $cl_output_obj.matchRegex}}
-  matchRegex: {{ tpl . $ | quote }}
-  {{- end }}
-  {{- with $cl_output_obj.match}}
-  match: {{ tpl . $ | quote }}
-  {{- end }}
-  {{- with $cl_output_obj.logLevel}}
-  logLevel: {{ tpl . $ | quote }}
-  {{- end }}
-  {{- with $cl_output_obj.alias }}
-  alias:
-  {{- tpl (toYaml .) $ | nindent 4 }}
-  {{- end }}
-  {{- with $cl_output_obj.azureBlob }}
-  azureBlob:
-  {{- tpl (toYaml .) $ | nindent 4 }}
-  {{- end }}
-  {{- with $cl_output_obj.azureLogAnalytics }}
-  azureLogAnalytics:
-  {{- tpl (toYaml .) $ | nindent 4 }}
-  {{- end }}
-  {{- with $cl_output_obj.cloudWatch }}
-  cloudWatch:
-  {{- tpl (toYaml .) $ | nindent 4 }}
-  {{- end }}
-  {{- with $cl_output_obj.datadog }}
-  datadog:
-  {{- tpl (toYaml .) $ | nindent 4 }}
-  {{- end }}
-  {{- with $cl_output_obj.es }}
-  es:
-  {{- tpl (toYaml .) $ | nindent 4 }}
-  {{- end }}
-  {{- with $cl_output_obj.file }}
-  file:
-  {{- tpl (toYaml .) $ | nindent 4 }}
-  {{- end }}
-  {{- with $cl_output_obj.firehouse }}
-  firehouse:
-  {{- tpl (toYaml .) $ | nindent 4 }}
-  {{- end }}
-  {{- with $cl_output_obj.forward }}
-  forward:
-  {{- tpl (toYaml .) $ | nindent 4 }}
-  {{- end }}
-  {{- with $cl_output_obj.gelf }}
-  gelf:
-  {{- tpl (toYaml .) $ | nindent 4 }}
-  {{- end }}
-  {{- with $cl_output_obj.http }}
-  http:
-  {{- tpl (toYaml .) $ | nindent 4 }}
-  {{- end }}
-  {{- with $cl_output_obj.customPlugin }}
-  customPlugin:
-  {{- tpl (toYaml .) $ | nindent 4 }}
-  {{- end }}
-  {{- with $cl_output_obj.influxDB }}
-  influxDB:
-  {{- tpl (toYaml .) $ | nindent 4 }}
-  {{- end }}
-  {{- with $cl_output_obj.kafka }}
-  kafka:
-  {{- tpl (toYaml .) $ | nindent 4 }}
-  {{- end }}
-  {{- with $cl_output_obj.kinesis }}
-  kinesis:
-  {{- tpl (toYaml .) $ | nindent 4 }}
-  {{- end }}
-  {{- with $cl_output_obj.loki }}
-  loki:
-  {{- $labels := list }}
-  {{- range $label_name, $label_value := .labels }}
-  {{- $labels = append $labels (printf "%s=%s" $label_name $label_value) }} 
-  {{- end }}
-  {{- $context := mustDeepCopy . }}
-  {{- $context := set $context "labels" $labels }}
-  {{- tpl (toYaml $context) $ | nindent 4 }}
-  {{- end }}
-  {{- with $cl_output_obj.opensearch }}
-  opensearch:
-  {{- tpl (toYaml .) $ | nindent 4 }}
-  {{- end }}
-  {{- with $cl_output_obj.opentelemetry }}
-  opentelemetry:
-  {{- tpl (toYaml .) $ | nindent 4 }}
-  {{- end }}
-  {{- with $cl_output_obj.processors }}
-  processors:
-  {{- tpl (toYaml .) $ | nindent 4 }}
-  {{- end }}
-  {{- with $cl_output_obj.prometheusExporter }}
-  prometheusExporter:
-  {{- tpl (toYaml .) $ | nindent 4 }}
-  {{- end }}
-  {{- with $cl_output_obj.prometheusRemoteWrite }}
-  prometheusRemoteWrite:
-  {{- tpl (toYaml .) $ | nindent 4 }}
-  {{- end }}
-  {{- with $cl_output_obj.s3 }}
-  s3:
-  {{- tpl (toYaml .) $ | nindent 4 }}
-  {{- end }}
-  {{- with $cl_output_obj.splunks }}
-  splunks:
-  {{- tpl (toYaml .) $ | nindent 4 }}
-  {{- end }}
-  {{- with $cl_output_obj.stackdriver }}
-  stackdriver:
-  {{- tpl (toYaml .) $ | nindent 4 }}
-  {{- end }}
-  {{- with $cl_output_obj.stdout }}
-  stdout:
-  {{- tpl (toYaml .) $ | nindent 4 }}
-  {{- end }}
-  {{- with $cl_output_obj.syslog }}
-  syslog:
-  {{- tpl (toYaml .) $ | nindent 4 }}
-  {{- end }}
-  {{- with $cl_output_obj.tcp }}
-  tcp:
-  {{- tpl (toYaml .) $ | nindent 4 }}
-  {{- end }}
-  {{- if (hasKey $cl_output_obj "null") }}
-  "null": {}
-  {{- end }}
+{{- include "fluentbit.clusteroutput" (list $ (toYaml $labels) $clOutput ) }}
 {{- end }}
