chart_deps/fluent/fluentbit/lib: filters

--- a/charts/chart_deps/fluent/fluentbit/filters/Chart.yaml
+++ b/charts/chart_deps/fluent/fluentbit/filters/Chart.yaml
@@ -3,3 +3,7 @@ appVersion: "1.0"
 description: Chart for configuring fluentbit filters
 name: fluentbit-filters
 version: 0.1.0
+dependencies:
+  - name: fluentbit-lib
+    version: 0.1.0
+    repository: file://../lib
