--- a/charts/chart_deps/fluent/fluentbit/parsers/templates/clustermultilineparsers.yaml
+++ b/charts/chart_deps/fluent/fluentbit/parsers/templates/clustermultilineparsers.yaml
@@ -1,32 +1,14 @@
-{{- range $cl_multilineParser_name, $cl_multilineParser_obj :=  .Values.clusterMultilineParsers }}
----
-apiVersion: fluentbit.fluent.io/v1alpha2
-kind: ClusterMultilineParser
-metadata:
-  name: {{ printf "%s-%s" (include "fluentbit-parsers.fullname" $) $cl_multilineParser_name }}
-  labels:
-{{- include "fluentbit-parsers.labels" $ | nindent 4 }}
-{{- with $cl_multilineParser_obj.labels }}
-{{- tpl (toYaml .) $ | nindent 4 }}
+{{- range $name, $clMultilineParsers :=  .Values.clusterMultilineParsers }}
+{{- $labels := include "fluentbit-parsers.labels" $ | fromYaml }}
+{{- $clMultilineParsers = set $clMultilineParsers "name" ( printf "%s-%s" (include "fluentbit-parsers.fullname" $ )  $name ) }}
+{{- if eq (hasKey $clMultilineParsers "enabled") false }}
+{{- $clMultilineParsers = set $clMultilineParsers "enabled" true }}
 {{- end }}
-{{- with $.Values.labels }}
-{{- tpl (toYaml .) $ | nindent 4 }}
+{{- if $clMultilineParsers.labels }}
+{{- $labels = merge $labels $clMultilineParsers.labels }}
 {{- end }}
-spec:
-  {{- with $cl_multilineParser_obj.flushTimeout}}
-  flushTimeout: {{ . }}
-  {{- end }}
-  {{- with $cl_multilineParser_obj.keyContent}}
-  keyContent: {{ tpl . $ | quote }}
-  {{- end }}
-  {{- with $cl_multilineParser_obj.parser}}
-  parser: {{ tpl . $ | quote }}
-  {{- end }}
-  {{- with $cl_multilineParser_obj.type}}
-  type: {{ tpl . $ | quote }}
-  {{- end }}
-  {{- with $cl_multilineParser_obj.rules }}
-  rules:
-  {{- tpl (toYaml .) $ | nindent 4 }}
-  {{- end }}
+{{- if $.Values.labels }}
+{{- $labels = merge $labels $.Values.labels }}
+{{- end }}
+{{- include "fluentbit.clustermultilineparsers" (list $ (toYaml $labels) $clMultilineParsers ) }}
 {{- end }}
