--- a/charts/chart_deps/fluent/fluentbit/parsers/templates/multilineparsers.yaml
+++ b/charts/chart_deps/fluent/fluentbit/parsers/templates/multilineparsers.yaml
@@ -1,33 +1,17 @@
-{{- range $multilineParser_name, $multilineParser_obj :=  .Values.multilineParsers }}
----
-apiVersion: fluentbit.fluent.io/v1alpha2
-kind: MultilineParser
-metadata:
-  name: {{ printf "%s-%s" (include "fluentbit-parsers.fullname" $) $multilineParser_name }}
-  namespace: "{{ $multilineParser_obj.namespace | default $.Release.Namespace }}"
-  labels:
-{{- include "fluentbit-parsers.labels" $ | nindent 4 }}
-{{- with $multilineParser_obj.labels }}
-{{- tpl (toYaml .) $ | nindent 4 }}
+{{- range $name, $multilineParser :=  .Values.multilineParsers }}
+{{- $labels := include "fluentbit-parsers.labels" $ | fromYaml }}
+{{- $multilineParser = set $multilineParser "name" ( printf "%s-%s" (include "fluentbit-parsers.fullname" $ )  $name ) }}
+{{- if eq (hasKey $multilineParser "namespace") false }}
+{{- $multilineParser = set $multilineParser "namespace" $.Release.Namespace }}
 {{- end }}
-{{- with $.Values.labels }}
-{{- tpl (toYaml .) $ | nindent 4 }}
+{{- if eq (hasKey $multilineParser "enabled") false }}
+{{- $multilineParser = set $multilineParser "enabled" true }}
 {{- end }}
-spec:
-  {{- with $multilineParser_obj.flushTimeout}}
-  flushTimeout: {{ . }}
-  {{- end }}
-  {{- with $multilineParser_obj.keyContent}}
-  keyContent: {{ tpl . $ | quote }}
-  {{- end }}
-  {{- with $multilineParser_obj.parser}}
-  parser: {{ tpl . $ | quote }}
-  {{- end }}
-  {{- with $multilineParser_obj.type}}
-  type: {{ tpl . $ | quote }}
-  {{- end }}
-  {{- with $multilineParser_obj.rules }}
-  rules:
-  {{- tpl (toYaml .) $ | nindent 4 }}
-  {{- end }}
+{{- if $multilineParser.labels }}
+{{- $labels = merge $labels $multilineParser.labels }}
+{{- end }}
+{{- if $.Values.labels }}
+{{- $labels = merge $labels $.Values.labels }}
+{{- end }}
+{{- include "fluentbit.multilineparser" (list $ (toYaml $labels) $multilineParser ) }}
 {{- end }}
