chart_deps/fluent/fluentbit: move common code to lib

--- a/charts/chart_deps/fluent/fluentbit/filters/values.yaml
+++ b/charts/chart_deps/fluent/fluentbit/filters/values.yaml
@@ -1,6 +1,7 @@
 filters:
 #  test:
 #    namespace: test
+#    enabled: true
 #    labels:
 #      fluentbit: test
 #    match: kube.*
@@ -30,12 +31,13 @@ filters:
 #          - kubernetes_*
 #          nestUnder: kubernetes
 #          removePrefix: kubernetes_
-#
+
 #labels:
 #  fluentbit1: test
 
 clusterFilters:
 #  test:
+#    enabled: true
 #    labels:
 #      fluentbit: test
 #    match: kube.*
