--- a/charts/chart_deps/fluent/fluentbit/outputs/values.yaml
+++ b/charts/chart_deps/fluent/fluentbit/outputs/values.yaml
@@ -32,6 +32,7 @@ outputs:
 
 clusterOutputs:
 #  test:
+#    enabled: true
 #    labels:
 #      fluentbit: test
 #    matchRegex: (?:kube|service)\.(.*)
