--- a/charts/chart_deps/fluent/fluentbit/parsers/values.yaml
+++ b/charts/chart_deps/fluent/fluentbit/parsers/values.yaml
@@ -13,8 +13,8 @@ parsers:
 #      timeFormat: '%Y/%m/%d %H:%M:%S'
 
 
-labels:
-  fluentbit1: test
+#labels:
+#  fluentbit1: test
 
 clusterParsers:
 #  test:
@@ -23,7 +23,7 @@ clusterParsers:
 #    json:
 #      timeKeep: false
 #  fluentbit:
-#    enabled: false
+#    enabled: true
 #    regex:
 #      regex: '^\[(?<time>[^\]]+)\][ ]*\[[ ]*(?<level>[^\]]+)\][ ]*\[(?<plugin>[^\]]+)\] (?<log>.*)'
 #      timeKey: 'time'
@@ -32,6 +32,9 @@ clusterParsers:
 
 multilineParsers:
 #  test:
+#    enabled: true
+#    labels:
+#      fluentbit: test
 #    type: "regex"
 #    flushTimeout: 1000
 #    namespace: test
@@ -51,22 +54,23 @@ multilineParsers:
 #        next: "cont"
 
 clusterMultilineParsers:
-#  test:
-#    labels:
-#      fluentbit: test
-#    type: "regex"
-#    flushTimeout: 1000
-#    keyContent: "log"
-#    rules:
-#      - start: "start_state"
-#        regex: '/^\[?(\d+\-\d+\-\d+ \d+\:\d+\:\d+(\.\d+)?)\]? /'
-#        next: "cont"
-#      - start: "cont"
-#        regex: '/^com\..*/'
-#        next: "cont"
-#      - start: "cont"
-#        regex: '/^\s+.*/'
-#        next: "cont"
-#      - start: "cont"
-#        regex: '/^Caused.*$/'
-#        next: "cont"
+  test:
+    enabled: true
+    labels:
+      fluentbit: test
+    type: "regex"
+    flushTimeout: 1000
+    keyContent: "log"
+    rules:
+      - start: "start_state"
+        regex: '/^\[?(\d+\-\d+\-\d+ \d+\:\d+\:\d+(\.\d+)?)\]? /'
+        next: "cont"
+      - start: "cont"
+        regex: '/^com\..*/'
+        next: "cont"
+      - start: "cont"
+        regex: '/^\s+.*/'
+        next: "cont"
+      - start: "cont"
+        regex: '/^Caused.*$/'
+        next: "cont"
