chart_deps/fluent/fluentbit: use lib chart

--- a/charts/chart_deps/fluent/fluentbit/fluentbit-operated/values.yaml
+++ b/charts/chart_deps/fluent/fluentbit/fluentbit-operated/values.yaml
@@ -1,11 +1,27 @@
-inputs:
-  enabled: false
+filters: {}
 
-outputs:
-  enabled: false
+clusterFilters: {}
 
-filters:
-  enabled: false
+
+inputs: {}
+
+clusterInputs: {}
+
+
+outputs: {}
+
+clusterOutputs: {}
+
+
+parsers: {}
+
+clusterParsers: {}
+
+
+multilineParsers: {}
+
+clusterMultilineParsers: {}
+
 
 clusterConfig:
   enabled: false
@@ -14,9 +30,6 @@ clusterConfig:
 config:
   enabled: false
   configFileFormat: "yaml"
-
-parsers:
-  enabled: false
 
 fluentbit:
   enabled: false
