--- a/charts/chart_deps/fluent/fluentbit/fluentbit-operated/templates/config.yaml
+++ b/charts/chart_deps/fluent/fluentbit/fluentbit-operated/templates/config.yaml
@@ -1,44 +1,4 @@
-{{- if .Values.config.enabled }}
----
-apiVersion: fluentbit.fluent.io/v1alpha2
-kind: FluentBitConfig
-metadata:
-  name: {{ include "fluentbit-operated.fullname" . }}
-  namespace: "{{ .Values.config.namespace | default .Release.Namespace }}"
-  labels:
-{{- include "fluentbit-operated.labels" $ | nindent 4 }}
-{{- with .Values.config.labels }}
-{{- tpl (toYaml .) $ | nindent 4 }}
-{{- end }}
-{{- with .Values.labels }}
-{{- tpl (toYaml .) $ | nindent 4 }}
-{{- end }}
-spec:
-  {{- with .Values.config.configFileFormat }}
-  configFileFormat: {{ tpl . $ | quote }}
-  {{- end }}
-  {{- with .Values.config.filterSelector }}
-  filterSelector:
-  {{- tpl (toYaml .) $ | nindent 4 }}
-  {{- end }}
-  {{- with .Values.config.inputSelector }}
-  inputSelector:
-  {{- tpl (toYaml .) $ | nindent 4 }}
-  {{- end }}
-  {{- with .Values.config.multilineParserSelector }}
-  multilineParserSelector:
-  {{- tpl (toYaml .) $ | nindent 4 }}
-  {{- end }}
-  {{- with .Values.config.outputSelector }}
-  outputSelector:
-  {{- tpl (toYaml .) $ | nindent 4 }}
-  {{- end }}
-  {{- with .Values.config.parserSelector }}
-  parserSelector:
-  {{- tpl (toYaml .) $ | nindent 4 }}
-  {{- end }}
-  {{- with .Values.config.service }}
-  service:
-  {{- tpl (toYaml .) $ | nindent 4 }}
-  {{- end }}
-{{- end }}
+{{- $config :=  .Values.config }}
+{{- $labels := include "fluentbit-operated.labels" $ | fromYaml }}
+{{- $config = set $config "name" ( include "fluentbit-operated.fullname" . ) }}
+{{- include "fluentbit.config" (list $ (toYaml $labels) $config ) }}
