chart_deps/fluent/fluentbit/fluentbit-operated: collector + fluentbit

--- a/charts/chart_deps/fluent/fluentbit/fluentbit-operated/templates/fluentbit.yaml
+++ b/charts/chart_deps/fluent/fluentbit/fluentbit-operated/templates/fluentbit.yaml
@@ -1,159 +1,4 @@
-{{- if .Values.fluentbit.enabled }}
----
-apiVersion: fluentbit.fluent.io/v1alpha2
-kind: FluentBit
-metadata:
-  name: {{ include "fluentbit-operated.fullname" . }}
-  labels:
-{{- include "fluentbit-operated.labels" $ | nindent 4 }}
-{{- with .Values.fluentbit.labels }}
-{{- tpl (toYaml .) $ | nindent 4 }}
-{{- end }}
-{{- with .Values.labels }}
-{{- tpl (toYaml .) $ | nindent 4 }}
-{{- end }}
-spec:
-  {{- with .Values.fluentbit.affinity }}
-  affinity:
-  {{- tpl (toYaml .) $ | nindent 4 }}
-  {{- end }}
-  {{- with .Values.fluentbit.annotations }}
-  annotations:
-  {{- tpl (toYaml .) $ | nindent 4 }}
-  {{- end }}
-  {{- with .Values.fluentbit.args }}
-  args:
-  {{- tpl (toYaml .) $ | nindent 4 }}
-  {{- end }}
-  {{- with .Values.fluentbit.command }}
-  command:
-  {{- tpl (toYaml .) $ | nindent 4 }}
-  {{- end }}
-  {{- with .Values.fluentbit.containerLogRealPath }}
-  containerLogRealPath: {{ tpl . $ | quote }}
-  {{- end }}
-  {{- with .Values.fluentbit.containerSecurityContext }}
-  containerSecurityContext:
-  {{- tpl (toYaml .) $ | nindent 4 }}
-  {{- end }}
-  {{- with .Values.fluentbit.disableLogVolumes }}
-  disableLogVolumes: {{ tpl . $ | quote }}
-  {{- end }}
-  {{- with .Values.fluentbit.disableService}}
-  disableService: {{ tpl . $ | quote }}
-  {{- end }}
-  {{- with .Values.fluentbit.dnsPolicy}}
-  dnsPolicy: {{ tpl . $ | quote }}
-  {{- end }}
-  {{- with .Values.fluentbit.envVars }}
-  envVars:
-  {{- tpl (toYaml .) $ | nindent 4 }}
-  {{- end }}
-  {{- with .Values.fluentbit.fluentBitConfigName }}
-  fluentBitConfigName: {{ tpl . $ | quote }}
-  {{- end }}
-  {{- with .Values.fluentbit.hostAliases }}
-  hostAliases:
-  {{- tpl (toYaml .) $ | nindent 4 }}
-  {{- end }}
-  {{- with .Values.fluentbit.hostNetwork }}
-  hostNetwork:
-  {{- tpl (toYaml .) $ | nindent 4 }}
-  {{- end }}
-  {{- with .Values.fluentbit.image}}
-  image: {{ tpl . $ | quote }}
-  {{- end }}
-  {{- with .Values.fluentbit.imagePullPolicy }}
-  imagePullPolicy: {{ tpl . $ | quote }}
-  {{- end }}
-  {{- with .Values.fluentbit.imagePullPolicy }}
-  imagePullSecrets:
-  {{- tpl (toYaml .) $ | nindent 4 }}
-  {{- end }}
-  {{- with .Values.fluentbit.initContainers }}
-  initContainers:
-  {{- tpl (toYaml .) $ | nindent 4 }}
-  {{- end }}
-  {{- with .Values.fluentbit.internalMountPropagation }}
-  internalMountPropagation: {{ tpl . $ | quote }}
-  {{- end }}
-  {{- with .Values.fluentbit.labels }}
-  labels:
-  {{- tpl (toYaml .) $ | nindent 4 }}
-  {{- end }}
-  {{- with .Values.fluentbit.livenessProbe}}
-  livenessProbe:
-  {{- tpl (toYaml .) $ | nindent 4 }}
-  {{- end }}
-  {{- with .Values.fluentbit.metricsPort}}
-  metricsPort: {{ . }}
-  {{- end }}
-  {{- with .Values.fluentbit.namespaceFluentBitCfgSelector }}
-  namespaceFluentBitCfgSelector:
-  {{- tpl (toYaml .) $ | nindent 4 }}
-  {{- end }}
-  {{- with .Values.fluentbit.nodeSelector }}
-  nodeSelector: {{ tpl . $ | quote }}
-  {{- end }}
-  {{- with .Values.fluentbit.ports}}
-  ports:
-  {{- tpl (toYaml .) $ | nindent 4 }}
-  {{- end }}
-  {{- with .Values.fluentbit.positionDB }}
-  positionDB:
-  {{- tpl (toYaml .) $ | nindent 4 }}
-  {{- end }}
-  {{- with .Values.fluentbit.priorityClassName }}
-  priorityClassName: {{ tpl . $ | quote }}
-  {{- end }}
-  {{- with .Values.fluentbit.rbacRules }}
-  rbacRules:
-  {{- tpl (toYaml .) $ | nindent 4 }}
-  {{- end }}
-  {{- with .Values.fluentbit.readinessProbe }}
-  readinessProbe:
-  {{- tpl (toYaml .) $ | nindent 4 }}
-  {{- end }}
-  {{- with .Values.fluentbit.resources }}
-  resources:
-  {{- tpl (toYaml .) $ | nindent 4 }}
-  {{- end }}
-  {{- with .Values.fluentbit.runtimeClassName}}
-  runtimeClassName: {{ tpl . $ | quote }}
-  {{- end }}
-  {{- with .Values.fluentbit.schedulerName}}
-  schedulerName: {{ tpl . $ | quote }}
-  {{- end }}
-  {{- with .Values.fluentbit.secrets }}
-  secrets:
-  {{- tpl (toYaml .) $ | nindent 4 }}
-  {{- end }}
-  {{- with .Values.fluentbit.securityContext }}
-  securityContext:
-  {{- tpl (toYaml .) $ | nindent 4 }}
-  {{- end }}
-  {{- with .Values.fluentbit.service }}
-  service:
-  {{- tpl (toYaml .) $ | nindent 4 }}
-  {{- end }}
-  {{- with .Values.fluentbit.serviceAccountAnnotations }}
-  serviceAccountAnnotations:
-  {{- tpl (toYaml .) $ | nindent 4 }}
-  {{- end }}
-  {{- with .Values.fluentbit.terminationGracePeriodSeconds }}
-  terminationGracePeriodSeconds:
-  {{- tpl (toYaml .) $ | nindent 4 }}
-  {{- end }}
-  {{- with .Values.fluentbit.tolerations }}
-  tolerations:
-  {{- tpl (toYaml .) $ | nindent 4 }}
-  {{- end }}
-  {{- with .Values.fluentbit.volumes }}
-  volumes:
-  {{- tpl (toYaml .) $ | nindent 4 }}
-  {{- end }}
-  {{- with .Values.fluentbit.volumesMounts }}
-  volumesMounts:
-  {{- tpl (toYaml .) $ | nindent 4 }}
-  {{- end }}
-{{- end }}
+{{- $fluentbit :=  .Values.fluentbit }}
+{{- $labels := include "fluentbit-operated.labels" $ | fromYaml }}
+{{- $fluentbit = set $fluentbit "name" (include "fluentbit-operated.fullname" . ) }}
+{{- include "fluentbit.fluentbit" (list $ (toYaml $labels) $fluentbit ) }}
